--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,5 +1,3 @@
-@import "global";
-
 #index-list, #index-grid {
 	display: none;
 	&.active {
@@ -8,11 +6,9 @@
 }
 
 .box-wrapper {
-	@extend .box;
-
 	flex-basis: $box-width;
 	&:not(:nth-last-child(-n+4)) {
-		margin-bottom: 25px;
+		margin-bottom: 35px;
 	}
 
 	position: relative;
