--- a/_sass/_proj.scss
+++ b/_sass/_proj.scss
@@ -1,7 +1,9 @@
-@import "global"; //TODO: correct way to import
+.proj-container {
+	overflow: scroll;
+	// TODO: gradient edges
+}
 
 .proj-description-box {
-	@extend .box;
 	width: 100%;
 	height: 60vh;
 	background-size: cover;
@@ -40,7 +42,6 @@
 		}
 
 		.proj-gallery {
-			@extend .box;
 			display: flex;
 			justify-content: center;
 			align-items: center;
