--- a/css/main.scss
+++ b/css/main.scss
@@ -5,13 +5,13 @@
 
 $title-font: "chaparral-pro", monospace;
 $title-size: 30px;
-$subtitle-size: 21px;
+$subtitle-size: 18px;
 $subtitle-color: #9E9E9E;
 $proj-title-font: "Avenir Next"; // TODO
 $paragraph-font: "Avenir Next"; // TODO
 $paragraph-font-size: 16px;
 $margin-size: 40px;
-$sidebar-width: 180px;
+$sidebar-width: 140px;
 $box-width: 32%;
 $box-color: #F5F5F5;
 $mobile-bar-height: 85px;
